# riverbed

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/data/: biomes.csv  block_breaking.json5  block_breaking.ron  block_harvesting.json5  blocks.def  firing.json5  grass_color.csv  handcraft.recipe  plants_condition.csv  soils_color.csv  soils_condition.csv  trees_condition.csv
assets/shaders/: chunk.wgsl  instancing.wgsl  prepass_chunk.wgsl
assets/textures/: LICENSE  pack.txt
benches/: chunk.rs  generation.rs
client/: Cargo.toml
client/src/: main.rs
client/src/agents/: key_binds.rs  mod.rs  movement.rs  other_players.rs  player.rs
client/src/agents/block_action/: block_hit_place.rs  furnace_action.rs  mod.rs
client/src/logging/: log_display.rs  mod.rs
client/src/network/: buffered_client.rs  chat.rs  cleanup.rs  data.rs  extensions.rs  inputs.rs  mod.rs  reconciliation.rs  save.rs  setup.rs  world.rs
client/src/network/models/: client_chunk.rs  mod.rs
client/src/render/: camera.rs  chunk_culling.rs  mesh_draw.rs  mesh_logic.rs  mesh_thread.rs  mesh_utils.rs  mod.rs  texture_array.rs  texture_load.rs
client/src/render/effects/: block_breaking.rs  mod.rs
client/src/render/sky/: mod.rs  sky.rs
client/src/sounds/: block_sound_load.rs  block_sounds.rs  effect_sounds.rs  mod.rs  ui_sounds.rs
client/src/ui/: craft_menu.rs  crosshair.rs  debug_display.rs  furnace_menu.rs  game_menu.rs  hotbar.rs  in_hand.rs  item_slots.rs  mod.rs  ui_tex_map.rs
client/src/world/: client_world_map.rs  mod.rs
crates/rb_agents/: Cargo.toml
crates/rb_agents/src/: camera_types.rs  furnace_state.rs  game_state.rs  lib.rs  movement.rs  player.rs  sound_components.rs  terrain_load_plugin.rs
crates/rb_agents/src/block_action/: block_hit_place.rs  furnace_action.rs  mod.rs
crates/rb_asset_processing/: Cargo.toml
crates/rb_block/: Cargo.toml  build.rs
crates/rb_block_def/: README.md
crates/rb_camera/: Cargo.toml
crates/rb_generation/: Cargo.toml
crates/rb_generation/src/: biome_params.rs  biomes.rs  layer.rs  lib.rs  plant_params.rs  terrain.rs  tree.rs
crates/rb_generation/src/coverage/: coverage.rs  mod.rs
crates/rb_generation/src/growables/: acacia.rs  baobab.rs  birch.rs  cypress.rs  mod.rs  oak.rs  sequoia.rs  spruce.rs  utils.rs
crates/rb_items/: Cargo.toml
crates/rb_log_inspector/: Cargo.toml
crates/rb_log_inspector/src/: log_display.rs  log_replay.rs  main.rs
crates/rb_logging/: Cargo.toml
crates/rb_noise/: Cargo.toml  README.md
crates/rb_physics/: Cargo.toml
crates/rb_pos/: Cargo.toml
crates/rb_render/: Cargo.toml
crates/rb_render/src/: camera.rs  chunk_culling.rs  lib.rs  mesh_draw.rs  mesh_logic.rs  mesh_thread.rs  mesh_utils.rs  texture_array.rs  texture_load.rs
crates/rb_render/src/effects/: block_breaking.rs
crates/rb_render/src/sky/: mod.rs  sky.rs
crates/rb_sounds/: Cargo.toml
crates/rb_ui/: Cargo.toml
crates/rb_ui/src/: craft_menu.rs  debug_display.rs  furnace_menu.rs  hotbar.rs  in_hand.rs  item_slots.rs  lib.rs  ui_tex_map.rs
crates/rb_ui/src/effects/: block_breaking.rs
crates/rb_world/: Cargo.toml
crates/rb_world/src/: block_entities.rs  chunk.rs  lib.rs  load_area.rs  voxel_world.rs
crates/rb_world/src/utils/: palette.rs
crates/riverbed_block_def/: Cargo.toml  README.md
crates/riverbed_closest/: Cargo.toml  README.md
crates/riverbed_closest/benches/: plants_points.csv  plants_ranges.csv  vec.rs
crates/riverbed_closest/src/: closest.rs  lib.rs  points.rs  ranges.rs  utils.rs
crates/riverbed_noise/: Cargo.toml  README.md  cargo.toml
server/: Cargo.toml
server/src/: init.rs  lib.rs  main.rs
server/src/generation/: biome_params.rs  biomes.rs  layer.rs  mod.rs  plant_params.rs  range_utils.rs  terrain.rs  tree.rs
server/src/generation/coverage/: counter.rs  coverage.rs  mod.rs
server/src/generation/growables/: acacia.rs  baobab.rs  birch.rs  cypress.rs  mod.rs  oak.rs  sequoia.rs  spruce.rs  utils.rs
server/src/logging/: log_broadcast.rs  log_inspect.rs  mod.rs
server/src/network/: block_interactions.rs  broadcast_chat.rs  broadcast_world.rs  cleanup.rs  dispatcher.rs  extensions.rs  mod.rs  players.rs
server/src/world/: block_entities.rs  chunk.rs  load_area.rs  mod.rs  serdable_packed_uints.rs  terrain_thread.rs  voxel_world.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs  utils.rs
shared/src/asset_processing/: craft_files.rs  filenames.rs  mod.rs
shared/src/block/: block.rs  face.rs  mod.rs
shared/src/items/: block_loot_table.rs  craft_table.rs  firing_table.rs  inventory.rs  item.rs  item_slots.rs  mod.rs
shared/src/logging/: log_inspector.rs  log_replay.rs  logging.rs  mod.rs
shared/src/messages/: auth.rs  chat.rs  mod.rs  player.rs  world.rs
shared/src/net/: clock.rs  codec.rs  input_history.rs  mod.rs
shared/src/physics/: mod.rs  player_step.rs
shared/src/world/: block_access.rs  block_entities.rs  chunk.rs  load_area.rs  mod.rs  realm.rs  serdable_packed_uints.rs  terrain_thread.rs  world_rng.rs
shared/src/world/pos/: load_area.rs  mod.rs  pos2d.rs  pos3d.rs
shared/src/world/utils/: mod.rs  palette.rs  serdable_packed_uints.rs
src/: bloc.rs  bloc_pos.rs  blocs.rs  chunk.rs  chunk_loader.rs  chunk_map.rs  col_commands.rs  conditionned_index.rs  debug_display.rs  debug_gen.rs  draw2d.rs  draw3d.rs  earth_gen.rs  get_set.rs  lib.rs  load_area.rs  load_cols.rs  logging.rs  main.rs  menu.rs  movement.rs  noise_build.rs  noise_utils.rs  packed_ints.rs  piecewise_remap.rs  player.rs  pos.rs  range_index.rs  realm.rs  render2d.rs  render3d.rs  sampler.rs  terrain.rs  terrain_gen.rs  terrain_thread.rs  texture_array.rs  ui.rs  utils.rs  weighted_dist.rs  world_data.rs
src/agents/: block_action.rs  key_binds.rs  mod.rs  movement.rs  player.rs
src/asset_processing/: craft_files.rs
src/block/: block.rs  face.rs  mod.rs  tree.rs
src/blocks/: block.rs  blocks.rs  chunk.rs  chunk_shape.rs  face.rs  mod.rs  tree.rs
src/blocs/: bloc.rs  blocs.rs  chunk.rs  chunk_shape.rs  col.rs  cols.rs  mod.rs
src/draw2d/: draw2d.rs  mod.rs  render2d.rs
(+208 files in other folders)
