[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "crates/*",
]

[workspace.dependencies]
bevy = { version = "0.17" }
cfg-if = "*"
crossbeam = "*"
hashbrown = "*"
itertools = "*"
json5 = "*"
packed-uints = "*"
parking_lot = "*"
rand_chacha = "*"
ron = "*"
serde = "*"

[profile.dev]
opt-level = 1
