[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "crates/*",
]

[workspace.dependencies]
bevy = { version = "0.17", features = ["serialize"] }
bevy_renet = "3.0.0"
bincode = "1.3.3"
cfg-if = "*"
clap = { version = "4.5.19", features = ["derive"] }
crossbeam = "*"
hashbrown = "*"
itertools = "*"
json5 = "*"
packed-uints = "*"
parking_lot = "*"
rand = "0.9"
rand_chacha = "0.9"
ron = "*"
serde = "*"
strum = "*"
strum_macros = "*"

[profile.dev]
opt-level = 1
