[package]
name = "riverbed"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*", "bin/*"]

[dependencies]
bevy = { version = "0.18" }
crossbeam = "*"
rand_chacha = "*"
rb_world = { path = "crates/rb_world" }
rb_generation = { path = "crates/rb_generation" }
rb_logging = { path = "crates/rb_logging" }
rb_agents = { path = "crates/rb_agents" }
rb_sounds = { path = "crates/rb_sounds" }
rb_render = { path = "crates/rb_render" }
rb_ui = { path = "crates/rb_ui" }

[profile.dev]
opt-level = 1
