[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
shared = { path = "../shared" }

bevy = { workspace = true }
cfg-if = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }

binary-greedy-meshing = "*"
confy = "*"
leafwing-input-manager = "0.18"
rand = "*"
rand_chacha = "*"
