[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
logging = ["shared/logging"]

[dependencies]
shared = { path = "../shared" }
server = { path = "../server" }

bevy = { workspace = true }
bevy_renet = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
crossbeam-skiplist = "*"
cfg-if = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true }
parking_lot = { workspace = true }
rand_chacha = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }

binary-greedy-meshing = "*"
confy = "*"
leafwing-input-manager = "0.18"
rand = "*"
