[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
shared = { path = "../shared" }

chrono = { version = "*", features = ["serde", "rkyv"] }
csv = "*"

# Define the library target
[lib]
name = "server"
path = "src/lib.rs"

# Define the binary target
[[bin]]
name = "server"
path = "src/main.rs"
