[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
shared = { path = "../shared" }

itertools = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }

anyhow = "*"
chrono = { version = "*", features = ["serde", "rkyv"] }
csv = "*"
riverbed_noise = { path = "../crates/riverbed_noise", version = "*" }

# Define the library target
[lib]
name = "server"
path = "src/lib.rs"

# Define the binary target
[[bin]]
name = "server"
path = "src/main.rs"
