[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
bevy = { workspace = true }
bevy_renet = { workspace = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true }
packed-uints = { workspace = true }
rand_chacha = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }

chrono = { version = "*", features = ["serde", "rkyv"] }
lazy_static = "*"
lz4 = "1.28.1"
regex = "*"

[build-dependencies]
riverbed_block_def = { path = "../crates/riverbed_block_def", version = "*" }
