[package]
name = "rb_log_inspector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rb_log_inspector"
path = "src/main.rs"

[dependencies]
rb_logging = { path = "../rb_logging" }
rb_pos = { path = "../rb_pos" }
bevy = { version = "0.18" }
chrono = { version = "0.4", features = ["serde"] }
leafwing-input-manager = "0.17"
ron = "0.8"
serde = "1"