[package]
name = "rb_render"
version = "0.1.0"
edition = "2024"

[dependencies]
rb_block = { path = "../rb_block", version = "*" }
rb_world = { path = "../rb_world", version = "*" }
rb_physics = { path = "../rb_physics", version = "*" }
rb_camera = { path = "../rb_camera", version = "*" }
rb_logging = { path = "../rb_logging", version = "*" }
rb_asset_processing = { path = "../rb_asset_processing", version = "*" }
bevy = { version = "0.18" }
crossbeam = "*"
parking_lot = "*"
hashbrown = "*"
itertools = "*"
binary-greedy-meshing = "*"
leafwing-input-manager = "*"
strum = "0.28"
