[package]
name = "riverbed_closest"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
anyhow = "*"
itertools = "*"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vec"
harness = false
